# Chawkidaar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml  task.yml
chawkidaar/: __init__.py  main.py
chawkidaar/agents/: __init__.py
chawkidaar/cli/: __init__.py  doctor.py
chawkidaar/config/: __init__.py  exceptions.py  manager.py  schema.py
chawkidaar/loops/: __init__.py  engine.py  events.py  persistence.py  state_machine.py
chawkidaar/telegram/: __init__.py
chawkidaar/utils/: __init__.py  logger.py
configs/: default.yaml
docs/: core_loop_engine.md  index.md
docs/adr/: 0001-project-architecture.md
docs/architecture/: agent-manager.md  context-builder.md  event-bus.md  github-integration.md  loop-engine.md  persistence.md  scheduler.md
prompts/: architect-review.md  execute-task.md  implementation-plan.md  walkthrough.md
tests/: __init__.py  test_config.py  test_engine.py  test_events.py  test_main.py  test_persistence.py  test_state_machine.py
